fix: loader spinner not visible when `forced-colors: active` (fixes SFKUI-7571)

--- a/packages/design/src/components/loader/_loader.scss
+++ b/packages/design/src/components/loader/_loader.scss
@@ -55,6 +55,10 @@
         height: size.$padding-100;
         position: absolute;
         width: size.$padding-100;
+
+        @media (forced-colors: active) {
+            background-color: CanvasText;
+        }
     }
 
     &__wait-text {
@@ -85,6 +89,10 @@
 
         .loader__circle {
             background-color: $loader-circle-inverted-color-background;
+
+            @media (forced-colors: active) {
+                background-color: CanvasText;
+            }
         }
     }
 
